--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+# Various
+.cache-tests
+.classpath
+.project
+.settings
